# valet

./: .gitignore  Cargo.toml  LICENSE  Makefile  Makefile.common  README.md  build.rs  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.cargo/: config.toml
.github/workflows/: codeql.yaml  gh-pages.yaml  rust.yaml
benches/: encrypt.rs  record.rs
crates/storgit/: Cargo.toml  TODO.md
crates/storgit/benches/: general.rs  generic.rs  submodule.rs
crates/storgit/benches/common/: mod.rs
crates/storgit/examples/: demo.rs  explore.rs  sync.rs
crates/storgit/src/: config.rs  entry.rs  error.rs  git.rs  id.rs  layout.rs  lib.rs  merge.rs  module.rs  parent.rs  persist.rs  remote.rs  store.rs  tarball.rs
crates/storgit/src/layout/: mod.rs  subdir.rs  submodule.rs
crates/storgit/src/layout/subdir/: merge.rs  mod.rs
crates/storgit/src/layout/submodule/: merge.rs  mod.rs  module.rs  parent.rs
crates/storgit/tests/: basic.rs  generic.rs  subdir.rs  submodule.rs
crates/storgit/tests/common/: mod.rs
crates/valet-ipc/: Cargo.toml  build.rs  cbindgen.toml
crates/valet-ipc/include/: valet_ipc.h
crates/valet-ipc/src/: client.rs  ffi.rs  lib.rs  request.rs  stub.rs
gui/: all.html  fn.main.html  index.html  sidebar-items.js
gui/app/: index.html  struct.App.html
gui/util/: fn.button_width.html  index.html  sidebar-items.js
gui/view/: index.html  sidebar-items.js  trait.View.html
gui/widget/: index.html  sidebar-items.js
macos-extension/: Makefile  README.md
macos-extension/App/: Info.plist  ValetAutoFill.entitlements  main.swift
macos-extension/Extension/: CredentialListView.swift  CredentialProviderViewController.swift  Info.plist  ValetAutoFillExt.entitlements  main.swift
macos-extension/Shared/: ValetClient.swift  module.modulemap
macos-extension/scripts/: gen-compile-commands.py
migrations/: 20250713012619_create_users.sql  20250713012624_create_lots.sql  20250722014302_create_records.sql  20250726222224_create_user_lot_keys.sql  20250802004530_create_user_lot_keys.sql  20250802004530_create_user_lots.sql  20260329003_create_lots.sql  20260329004_create_records.sql  20260418005_records_split_label.sql  20260419006_records_storgit.sql
platform/browser/: Cargo.toml  Makefile  README.md  background.js  content.js  manifest.json  popup.js
platform/browser/native-host/: Cargo.toml  com.nixpulvis.valet.json.template
platform/browser/native-host/src/: backend.rs  main.rs
platform/browser/native-host/src/backend/: embedded.rs  socket.rs  socket_relay.rs
platform/firefox/: Cargo.toml  README.md  background.js  content.js  manifest.json  popup.html  popup.js  test.js  wasm_loader.js
platform/firefox/native-host/: Cargo.toml
platform/firefox/native-host/src/: lib.rs  main.rs
platform/firefox/src/: lib.rs
platform/firefox/src/background/: externs.rs  mod.rs  port.rs
platform/firefox/src/content/: detect.rs  overlay.rs
platform/firefox/src/popup/: app.rs  browser.rs  rpc.rs
platform/firefox/xtask/src/: main.rs
platform/macos/: Makefile  README.md
search.desc/valet/: valet-desc-0-.js
search.index/: 000f8b1030e8.js  0053f9b44d17.js  00626ae01823.js  00972c7b2625.js  00bbd0f0edba.js  00d7a6580ca5.js  00ed17818a2e.js  01278ec5b26c.js  013183c0f277.js  019d7535c260.js  01aee72ae4a5.js  01d877c15daa.js  01dc43c8f46b.js  0269ba78b691.js  0288ba6f1591.js  028bf4fb7d0f.js  02ba9b98a32b.js  02e1c6f16106.js  038974086a4e.js  0399db882051.js  039d08cdb617.js  03a2241915c0.js  03bdbd67ddc6.js  03d5abbd24ff.js  03e47dbe764e.js  0413e8f31188.js  04361b22718d.js  043df1318883.js  0472ab3958f8.js  047c8ee9c1b4.js  048f460885d0.js  04a3e0a0b5fe.js  04afac8e55a3.js  04c9b626d69a.js  04d29406749a.js  0574fe33910c.js  05c5f4910e2c.js  065a53ff948b.js  065ac191b85f.js  074946f0ab54.js  (+423 more)
search.index/crateNames/: 3c2fcc7e05cc.js  46920ee2a001.js  5dc91973c547.js  f51f0542cb6d.js
search.index/desc/: 06165ae63f68.js  0a82eff6f3ee.js  0e08b0e0aaba.js  151e3a1dc836.js  1c8424c47bab.js  24399934fb9e.js  254de4e7f5c7.js  53d809474b16.js  56324a4a8bb4.js  7e26498b9ad4.js  89c90babc649.js  a6e1402c2072.js  bb7f27ce9512.js  d28df083a1f6.js  ff11ea7f56be.js
search.index/entry/: 0e9af01913e4.js  2c2a420e72de.js  44e57d3e3ba9.js  50c0f84bf906.js  57fa4c9cd641.js  67be56600f62.js  6980339bf958.js  6b23a19fbe87.js  86cb291b3d4f.js  8aea0ce438a1.js  9cf8414d995c.js  a0cb14f04727.js  ba34fcc34073.js  bbb15efe8a02.js  bffde77bd4d8.js  c360782d1f01.js  c3c6d5942eef.js  d4fb3d990ed9.js  db5f8f478464.js  e46b8178f7fb.js  ee69481eaa29.js  f01735046b0b.js
search.index/function/: 00c43f52d242.js  3002219df1b0.js  3533439671ed.js  41d218c1c82e.js  46d6e45add73.js  54938e3ada28.js  59d8566ae4c7.js  5f51170c8b4e.js  618756f4c715.js  72ef6f493d6f.js  88c6db4e373b.js  9607ce0e2ec2.js  9a114a263eb3.js  a0238cc95951.js  a44884d0a55f.js  ab4080029922.js  b6e271354995.js  c71b3f4bcef9.js  c803bbed6d09.js  d1eda66e4acb.js  (+2 more)
src/: db.rs  encrypt.rs  lib.rs  logging.rs  lot.rs  main.rs  password.rs  prelude.rs  record.rs  user.rs  uuid.rs
storgit/: all.html  enum.Error.html  index.html  sidebar-items.js  struct.CommitId.html  struct.Entry.html  struct.Store.html
tests/: protocol.rs  stub.rs
valet/: all.html  index.html  macro.pw!.html  macro.pw.html  sidebar-items.js
valet-build/: Cargo.toml  cbindgen.toml
valet_browser/: all.html  fn.generate_password.html  fn.main.html  fn.password_is_valid.html  index.html  sidebar-items.js
valet_build/: all.html  fn.generate_header.html  index.html  sidebar-items.js
valetd/: Cargo.toml  all.html  build.rs  enum.Backend.html  enum.Transport.html  fn.auto_transport.html  fn.build_embedded_handler.html  fn.main.html  fn.parse_backend.html  fn.run_native_msg.html  fn.run_socket.html  index.html  sidebar-items.js  struct.Args.html
valetd/native_msg_cli/: fn.run.html  fn.run_auto.html  fn.run_embedded.html  fn.run_socket_relay.html  fn.serve.html  index.html  sidebar-items.js
valetd/socket_cli/: fn.run.html  index.html
valetd/src/: client.rs  ffi.rs  lib.rs  request.rs  server.rs  socket.rs  stub.rs
(+692 files in other folders)
