[workspace]
members = ["crates/storgit", "valet-build", "valetd"]

[package]
name = "valet"
version = "0.0.2"
edition = "2024"
default-run = "valet"
license = "MIT"
documentation = "https://nixpulvis.com/valet/valet"
repository = "https://github.com/nixpulvis/valet"
authors = ["Nathan Lilienthal <nathan@nixpulvis.com>"]
description = """
Valet is a password management framework and manager CLI/GUI application.
"""

[lib]
# staticlib is always produced so the `ffi` feature can build `libvalet.a`.
crate-type = ["rlib", "staticlib"]

[package.metadata.bundle.bin.gui]
name = "Valet"

[[bin]]
name = "gui"
required-features = ["gui"]

[[bin]]
name = "valet"
path = "src/bin/cli.rs"
required-features = ["cli"]

[features]
default = ["cli"]

# Enables the SQLite database layer (`db` module, CRUD operations on
# `User`/`Lot`/`Record`, and the `prelude` convenience re-exports).
# Without this feature the crate is a pure encryption/data library.
db = ["dep:sqlx", "dep:sea-orm", "dep:url", "dep:storgit"]

# Expose the SeaORM entity modules as `pub` instead of `pub(crate)`.
orm = []

# Exposes the stable C-ABI surface in `valet::ffi`, generates `valet.h` via
# cbindgen, and produces a `libvalet.a`.
ffi = []

cli = [
    "db",
    "dep:tokio",
    "dep:rpassword",
    "dep:clap",
    "dep:clap-repl",
    "dep:clap_complete",
    "dep:csv",
    "dep:serde",
    "dep:chrono",
]

gui = ["db", "dep:tokio", "dep:eframe", "dep:egui_inbox"]

[dependencies]
aes-gcm-siv = "0.11"
argon2 = "0.5"
# bitcode = "0.6.6"
bitcode = { git = "https://github.com/nixpulvis/bitcode", branch = 'pin-support' }
rand_core = "0.6"
snap = "1.1.1"
uuid = { version = "1.17", features = ["v7"] }
zeroize = { version = "1.8", features = ["derive"] }

# Storage (db/user/lot/record)
sea-orm = { version = "2.0.0-rc.37", features = ["sqlx-sqlite", "runtime-tokio-rustls"], optional = true }
storgit = { path = "crates/storgit", optional = true }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"], optional = true }
url = { version = "2.5", optional = true }

# CLI Dependencies
tokio = { version = "1.46", features = ["full"], optional = true }
rpassword = { version = "7.4", optional = true }
csv = { version = "1.3", optional = true }
regex = "1.12"
clap = { version = "4.5", features = ["derive", "cargo"], optional = true }
clap-repl = { version = "0.3", features = ["async"], optional = true }
clap_complete = { version = "4.5", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }

# GUI Dependencies
eframe = { version = "0.32", optional = true }
egui_inbox = { version = "0.9", optional = true }

[build-dependencies]
valet-build = { path = "valet-build" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "encrypt"
harness = false
[[bench]]
name = "record"
harness = false
