[workspace]
members = [
    "crates/storgit",
    "valet-build",
    "platform/browser",
]

[workspace.dependencies]
# Canonical tokio version for everything in the workspace. `valet`
# pulls it in optionally (via `_async-io` / `cli` / `gui` / `db`) and
# unconditionally in `[dev-dependencies]`; other workspace members
# inherit the same version here.
tokio = { version = "1.46", features = ["full"] }

[package]
name = "valet"
version = "0.0.2"
edition = "2024"
default-run = "valet"
license = "MIT"
documentation = "https://nixpulvis.com/valet/valet"
repository = "https://github.com/nixpulvis/valet"
authors = ["Nathan Lilienthal <nathan@nixpulvis.com>"]
description = """
Valet is a password management framework and manager CLI/GUI application.
"""

[lib]
# staticlib is always produced so the `ffi` feature can build `libvalet.a`.
crate-type = ["rlib", "staticlib"]
bench = false

[package.metadata.bundle.bin.gui]
name = "Valet"

[[bin]]
name = "gui"
required-features = ["gui"]
bench = false

[[bin]]
name = "valet"
path = "src/bin/cli.rs"
required-features = ["cli"]
bench = false

[[bin]]
name = "valetd"
path = "src/bin/valetd/main.rs"
# Any protocol is enough to get a useful valetd; missing transports
# are cfg-gated out of the binary and rejected at runtime with a
# clear error. `protocol-all` remains a convenience bundle for callers
# that want every transport compiled in.
required-features = ["_protocols"]
bench = false

# `cargo test --test protocol` on the default feature set would
# otherwise silently report 0 tests (every submodule is gated). Gate
# the whole binary on `_protocols`, which any `protocol-*` feature
# turns on, so a default-feature run fails with a clear "requires
# feature" message instead.
[[test]]
name = "protocol"
path = "tests/protocol.rs"
required-features = ["_protocols"]

[features]
default = ["cli"]

# Enables `valet::logging::init`, a shared `tracing-subscriber` installer
# used by every binary that wants stderr logs (valetd, native-host, CLI,
# GUI). `tracing` itself is always available; this feature only adds the
# subscriber, which is not wasm-friendly. WASM consumers skip the feature
# and install their own subscriber (e.g. `tracing-web`).
logging = ["dep:tracing-subscriber"]

# Enables the SQLite database layer (`db` module, CRUD operations on
# `User`/`Lot`/`Record`, and the `prelude` convenience re-exports).
# Without this feature the crate is a pure encryption/data library.
db = ["dep:sqlx", "dep:sea-orm", "dep:url", "dep:storgit", "dep:tempfile", "dep:tokio"]

# Expose the SeaORM entity modules as `pub` instead of `pub(crate)`.
orm = []

# Exposes the stable C-ABI surface in `valet::ffi`, generates `valet.h` via
# cbindgen, and produces a `libvalet.a`.
ffi = []

# Wire protocols. Each gate compiles one `Protocol` impl plus its
# `Client<P>` and (where applicable) `Server<P>` halves. `protocol-
# embedded` owns a SQLite DB and dispatches in-proc; `protocol-socket`
# ships requests over a Unix socket and serves the same protocol on
# the other end; `protocol-native-msg-server` serves stdio native-messaging
# frames to the browser. Each pulls in tokio via the private
# `_async-io` feature, which also enables the async framing helpers
# on `Request` / `Response` that the socket and native-messaging
# halves need.
protocol-all = ["protocol-embedded", "protocol-socket", "protocol-native-msg-server"]
protocol-embedded = ["_protocols", "db", "logging", "dep:clap"]
protocol-socket = ["_protocols", "_async-io", "logging", "dep:clap"]
# Server half of the native-messaging protocol. The daemon's stdio
# loop lives here and needs tokio.
protocol-native-msg-server = ["_protocols", "_async-io", "logging", "dep:clap", "dep:serde_json"]
# Client half of the native-messaging protocol: a `Client<NativeMessage>`
# that wraps a `browser.runtime.Port` for use from WASM extension
# code. No tokio; pulls in wasm-bindgen + friends instead.
protocol-native-msg-client = [
    "_protocols",
    "dep:serde_json",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:serde-wasm-bindgen",
    "dep:futures",
]
# Internal umbrella: any protocol implies it. Gates the `Client<P>` /
# `Server<P>` / `Protocol` surface, which is dead code in pure-wire
# builds (the browser WASM popup, which only uses `Request`/`Response`).
_protocols = []
_async-io = ["dep:tokio"]


cli = [
    "protocol-embedded",
    "dep:tokio",
    "dep:rpassword",
    "dep:clap",
    "dep:clap-repl",
    "dep:clap_complete",
    "dep:csv",
    "dep:chrono",
]

gui = ["protocol-embedded", "dep:tokio", "dep:eframe", "dep:egui_inbox"]

[dependencies]
aes-gcm-siv = "0.11"
argon2 = "0.5"
# bitcode = "0.6.6"
bitcode = { git = "https://github.com/nixpulvis/bitcode", branch = 'pin-support' }
rand_core = "0.6"
snap = "1.1.1"
uuid = { version = "1.17", features = ["v7"] }
zeroize = { version = "1.8", features = ["derive"] }

# Protocol/wire types. Always compiled so the pure-data build (WASM)
# can still encode/decode `Request` and `Response` plus the native-
# messaging JSON envelope (`NativeRequest`/`NativeReply`/
# `NativePayload`) for the browser extension.
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }

# Native-messaging transport: JSON envelope around bitcode frames.
# Pulled in by both native-messaging halves (server + WASM client).
serde_json = { version = "1.0", optional = true }

# WASM native-messaging client. Only enabled by
# `protocol-native-msg-client`; the `Client<NativeMessage>` wraps a
# `browser.runtime.Port` and needs to talk to JS.
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
futures = { version = "0.3", default-features = false, features = ["std"], optional = true }

# Storage (db/user/lot/record)
sea-orm = { version = "2.0.0-rc.37", features = ["sqlx-sqlite", "runtime-tokio-rustls"], optional = true }
storgit = { path = "crates/storgit", optional = true }
tempfile = { version = "3.10", optional = true }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"], optional = true }
url = { version = "2.5", optional = true }

# CLI Dependencies
tokio = { workspace = true, optional = true }
rpassword = { version = "7.4", optional = true }
csv = { version = "1.3", optional = true }
regex = "1.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std", "fmt", "env-filter"], optional = true }
clap = { version = "4.5", features = ["derive", "cargo"], optional = true }
clap-repl = { version = "0.3", features = ["async"], optional = true }
clap_complete = { version = "4.5", optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }

# GUI Dependencies
eframe = { version = "0.32", optional = true }
egui_inbox = { version = "0.9", optional = true }

# WASM-specific flags: `getrandom` and `uuid` both need their `js`
# feature to compile for `wasm32-unknown-unknown`. These are transitive
# deps on every build; the target-gated section enables the JS backend
# only when cross-compiling to wasm, so native builds stay lean.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.17", features = ["v7", "js"] }

[build-dependencies]
valet-build = { path = "valet-build" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
# Integration tests use `#[tokio::test]` even when the crate is being
# built with no protocol features (e.g. the zero-feature row of the
# feature matrix). Dev-deps make tokio available to every test
# binary without forcing a specific feature on; the workspace entry
# keeps the version pinned in one place.
tokio = { workspace = true }

[[bench]]
name = "encrypt"
harness = false
[[bench]]
name = "record"
harness = false
