[package]
name = "valetd"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Valet daemon: wire protocol, FFI, and server binary."

[lib]
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "valetd"
path = "src/bin/valetd.rs"

[features]
default = ["stub"]
stub = []

[dependencies]
valet = { path = "..", default-features = false, features = ["ffi"] }
bitcode = { git = "https://github.com/nixpulvis/bitcode", branch = "pin-support" }

[build-dependencies]
valet-build = { path = "../valet-build" }
