[package]
name = "valet-firefox"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
valet = { path = "../..", default-features = false }
valet-native-host = { path = "native-host", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Navigator",
    "Clipboard",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlOptionElement",
    "HtmlElement",
    "Node",
    "NodeList",
    "Url",
    "Element",
    "DomRect",
    "DomTokenList",
    "CssStyleDeclaration",
    "ShadowRoot",
    "ShadowRootInit",
    "ShadowRootMode",
    "MutationObserver",
    "MutationObserverInit",
    "MutationRecord",
    "Event",
    "EventInit",
    "InputEvent",
    "InputEventInit",
    "MouseEvent",
    "AddEventListenerOptions",
] }
gloo-timers = { version = "0.3", features = ["futures"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std", "fmt"] }
tracing-web = "0.1"
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.17", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
yew = { version = "0.21", features = ["csr"] }
stylist = { version = "0.13", features = ["yew"] }
console_error_panic_hook = "0.1"
