[package]
name = "valet-native-host"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "valet-native-host"
path = "src/main.rs"

[dependencies]
# `native` pulls in `DaemonHandler` and the server stack for the embedded
# fallback; the shim uses both backends at runtime.
valetd = { path = "../../../valetd", default-features = false, features = ["native"] }
base64 = "0.22"
serde_json = "1.0"
tokio = { version = "1.46", features = [
    "macros",
    "rt",
    "io-std",
    "io-util",
    "net",
    "sync",
    "time",
] }
