[package]
name = "valet-native-host"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "valet-native-host"
path = "src/main.rs"

[features]
default = []
# Embed a `valetd::DaemonHandler` directly inside the shim, skipping the
# Unix socket. Used for single-binary installs where spawning a separate
# daemon isn't worth it. Pulls in the full server-side stack (SQLite,
# crypto), so the default stays socket-relay.
embedded = ["valetd/native"]

[dependencies]
valetd = { path = "../../../valetd", default-features = false }
base64 = "0.22"
serde_json = "1.0"
tokio = { version = "1.46", features = [
    "macros",
    "rt",
    "io-std",
    "io-util",
    "net",
    "sync",
    "time",
] }
