[package]
name = "valet-native-host"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "valet-native-host"
path = "src/main.rs"
required-features = ["bin"]

[features]
default = ["bin"]
# The lib half (wire schema) is wasm-friendly and dep-light. The bin half is
# the host daemon, which needs tokio + valet's db layer.
bin = ["dep:tokio", "dep:serde_json", "valet/db"]

[dependencies]
base64 = "0.22"
bitcode = { git = "https://github.com/nixpulvis/bitcode", branch = "pin-support" }
valet = { path = "../../..", default-features = false }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.46", features = ["macros", "rt", "io-std", "io-util", "sync", "time"], optional = true }
